html-lomakkeiden koodin  muotoilun kunnostamista

--- a/application/templates/auth/delete_confirmation.html
+++ b/application/templates/auth/delete_confirmation.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <h1>Account deletion</h1>
-<h2>{{ current_user.username }}</h2>
+<h2>{{ current_user.username }} {{ "we are sad to see you go!" }}</h2>
 <p>Do you want to delete your account?</p>
 <form method="POST" action="{{ url_for('bettor_delete_confirmation') }}">
   <input type="submit" value="Yes, delete my account" />
