--- a/application/templates/auth/loginform.html
+++ b/application/templates/auth/loginform.html
@@ -1,28 +1,27 @@
-{% extends "layout.html" %}
+{% extends "layout.html" %} 
 
-{% block body %}
-{{ error }}
+{% block body %} {{ error }}
 <form method="POST" action="{{ url_for('auth_login') }}">
   <table>
     <tr>
       <td>
-	{{ form.username.label }}
+        {{ form.username.label }}
       </td>
       <td>
-	{{ form.username }}
+        {{ form.username }}
       </td>
     </tr>
     <tr>
       <td>
-	{{ form.password.label }}
+        {{ form.password.label }}
       </td>
       <td>
-	{{ form.password }}
+        {{ form.password }}
       </td>
     </tr>
     <tr>
       <td colspan="2">
-	<input type="submit" value="Login"/>
+        <input type="submit" value="Login" />
       </td>
     </tr>
 </form>
