--- a/application/templates/betting_offers/new_offer.html
+++ b/application/templates/betting_offers/new_offer.html
@@ -1,4 +1,6 @@
-{% extends "layout.html" %} {% block body %}
+{% extends "layout.html" %} 
+
+{% block body %}
 <form method="POST" action="{{ url_for('betting_offers_create', match_id = match.id) }}">
 	<table>
 		<tr>
