--- a/application/templates/bet_coupons/show_bet_coupon.html
+++ b/application/templates/bet_coupons/show_bet_coupon.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<header>
   <h1>Bet coupon</h1>
   <table border="1" cellspacing="8">
     <tr align="left">
@@ -25,10 +24,11 @@
       </td>
       <td>
         {% if coupon.possible_win_cent < 10 %}
-        {% set money = coupon.possible_win_eur ~ ".0" ~ coupon.possible_win_cent %} 
-          {{ money }}
-        {% else %} {% set money = coupon.possible_win_eur ~ "." ~ coupon.possible_win_cent %}
-          {{ money }}
+          {% set money = coupon.possible_win_eur ~ ".0" ~ coupon.possible_win_cent %}
+            {{ money }}
+        {% else %}
+          {% set money = coupon.possible_win_eur ~ "." ~ coupon.possible_win_cent %}
+            {{ money }}
         {% endif %}
       </td>
       <td>{{ coupon.bet_status }}</td>
@@ -53,7 +53,7 @@
       <td>{{ mofc[1].status }}</td>
     </tr>
   </table>
-  <br> {% endfor %}
+  <br>
+  {% endfor %}
   <a href="{{ url_for('bet_coupons_index') }}">Show all your bet coupons</a>
-</header>
 {% endblock %}
