Salasanan vaihdolle, rahan talletukselle ja rahan poissiirrolle tililtä erilliset näkymät, saldon validointi ennen poissiirtoa, vanhan salasanan tarkistus ja uuden salasanan anto kahteen kertaan

--- a/application/templates/auth/delete_confirmation.html
+++ b/application/templates/auth/delete_confirmation.html
@@ -7,6 +7,7 @@
 <br>
 <h2>Do you want to delete your account?</h2>
 <h3>Yes</h3>
+<p>If you choose this option, your money will be automatically transferred to your bank account</p>
 <form method="POST" action="{{ url_for('bettor_delete_confirmation') }}">
   <input type="submit" value="Yes, delete my account" />
 </form>
