Tuloksen asetuksessa on nyt vahvistus kaksinkertaisen syöttämisen muodossa, peruutusnapit käyttäjän tilinmuokkauksille ja tuloksen syötölle

--- a/application/templates/auth/money_in.html
+++ b/application/templates/auth/money_in.html
@@ -30,7 +30,8 @@
     </tr>
     <tr>
       <td colspan="2">
-        <input type="submit" value="Deposit money to your betting account" />
+        <input type="submit" value="Deposit money to your betting account"/>
+        <input type="submit" value="Cancel" formaction="{{ url_for('bettor_cancel_update') }}" />
       </td>
     </tr>
 </form>
