--- a/application/templates/auth/money_out.html
+++ b/application/templates/auth/money_out.html
@@ -38,7 +38,8 @@
     </tr>
     <tr>
       <td colspan="2">
-        <input type="submit" value="Withdraw money from your betting account" />
+        <input type="submit" value="Withdraw money from your betting account"/>
+        <input type="submit" value="Cancel" formaction="{{ url_for('bettor_cancel_update') }}" />
       </td>
     </tr>
 </form>
