--- a/application/templates/auth/change_password.html
+++ b/application/templates/auth/change_password.html
@@ -71,6 +71,7 @@
     <tr>
       <td colspan="2">
         <input type="submit" value="Change password" />
+        <input type="submit" value="Cancel" formaction="{{ url_for('bettor_cancel_update') }}"/>
       </td>
     </tr>
 </form>
