--- a/application/templates/auth/new_bettor.html
+++ b/application/templates/auth/new_bettor.html
@@ -35,35 +35,19 @@
 		</tr>
 		<tr>
 			<td>
-				{{ form.balance_eur.label }}
+				{{ form.confirm_password.label }}
 			</td>
 			<td>
-				{{ form.balance_eur(style="width: 70px") }}
+				{{ form.confirm_password }}
 			</td>
 			<td>
 				<ul>
-					{% for error in form.balance_eur.errors %}
+					{% for error in form.confirm_password.errors %}
 					<li>{{ error }}</li>
 					{% endfor %}
 				</ul>
 			</td>
 		</tr>
-		<tr>
-			<td>
-				{{ form.balance_cent.label }}
-			</td>
-			<td>
-				{{ form.balance_cent(style="width: 70px") }}
-			</td>
-			<td>
-				<ul>
-					{% for error in form.balance_cent.errors %}
-					<li>{{ error }}</li>
-					{% endfor %}
-				</ul>
-			</td>
-		</tr>
-
 		<tr>
 			<td colspan="5">
 				<input type="submit" value="Create an account" />
