--- a/application/templates/betting_offers/admin_offer_list.html
+++ b/application/templates/betting_offers/admin_offer_list.html
@@ -22,9 +22,11 @@
     <td>{{ match_offer[1].max_stake }}</td>
     <td>{{ match_offer[1].active }}</td>
     <td>{{ match_offer[1].closed }}</td>
+    {% if match_offer[0].result_1x2 == "tbd" %}
     <td>
       <a href="{{ url_for('betting_offers_update', offer_id = match_offer[1].id) }}">Update offer</a>
     </td>
+    {% endif %}
     <td>
       <form method="POST" action="{{ url_for('betting_offers_delete', offer_id = match_offer[1].id) }}">
         <input type="submit" value="Delete offer"/>
