html-sivujen luettavuuden muokkausta

--- a/application/templates/auth/change_password.html
+++ b/application/templates/auth/change_password.html
@@ -12,12 +12,8 @@
       </td>
     </tr>
     <tr>
-      <td>
-        {{ form.old_password.label }}
-      </td>
-      <td>
-        {{ form.old_password }}
-      </td>
+      <td>{{ form.old_password.label }}</td>
+      <td>{{ form.old_password }}</td>
       <td>
 				<ul>
 					{% for error in form.old_password.errors %}
@@ -27,12 +23,8 @@
 			</td>
     </tr>
     <tr>
-      <td>
-        {{ form.new_password.label }}
-      </td>
-      <td>
-        {{ form.new_password }}
-      </td>
+      <td>{{ form.new_password.label }}</td>
+      <td>{{ form.new_password }}</td>
       <td>
 				<ul>
 					{% for error in form.new_password.errors %}
@@ -42,12 +34,8 @@
 			</td>
     </tr>
     <tr>
-      <td>
-        {{ form.new_confirm.label }}
-      </td>
-      <td>
-        {{ form.new_confirm }}
-      </td>
+      <td>{{ form.new_confirm.label }}</td>
+      <td>{{ form.new_confirm }}</td>
       <td>
 				<ul>
 					{% for error in form.new_confirm.errors %}
@@ -57,9 +45,7 @@
 			</td>
     </tr>
     <tr>
-      <td>
-      {{ form.bettor_id(value=current_user.id) }}
-      </td>
+      <td>{{ form.bettor_id(value=current_user.id) }}</td>
       <td>
 				<ul>
 					{% for error in form.bettor_id.errors %}
