--- a/application/templates/auth/loginform.html
+++ b/application/templates/auth/loginform.html
@@ -1,23 +1,15 @@
-{% extends "layout.html" %} 
+{% extends "layout.html" %}
 
 {% block body %} {{ error }}
 <form method="POST" action="{{ url_for('auth_login') }}">
   <table>
     <tr>
-      <td>
-        {{ form.username.label }}
-      </td>
-      <td>
-        {{ form.username }}
-      </td>
+      <td>{{ form.username.label }}</td>
+      <td>{{ form.username }}</td>
     </tr>
     <tr>
-      <td>
-        {{ form.password.label }}
-      </td>
-      <td>
-        {{ form.password }}
-      </td>
+      <td>{{ form.password.label }}</td>
+      <td>{{ form.password }}</td>
     </tr>
     <tr>
       <td colspan="2">
