Tuloksen asettamiseen lisätty vielä pakollinen checkbox, jotta väärien tulosten asettamismahdollisuus vahingossa minimoidaan

--- a/application/templates/matches/set_result.html
+++ b/application/templates/matches/set_result.html
@@ -29,6 +29,17 @@
 			</td>
 		</tr>
 		<tr>
+			<td>{{ form.accept_result.label }}</td>
+			<td>{{ form.accept_result }}</td>
+			<td>
+				<ul>
+					{% for error in form.accept_result.errors %}
+					<li>{{ error }}</li>
+					{% endfor %}
+				</ul>
+			</td>
+		</tr>
+		<tr>
 			<td colspan="5">
 				<input type="submit" value="Set result"/>
 			</td>
