--- a/application/templates/bet_coupons/show_bet_coupon.html
+++ b/application/templates/bet_coupons/show_bet_coupon.html
@@ -55,5 +55,5 @@
   </table>
   <br>
   {% endfor %}
-  <a href="{{ url_for('bet_coupons_index') }}">Show all your bet coupons</a>
+  <a href="{{ url_for('bet_coupons_index') }}">My betting history</a>
 {% endblock %}
