--- a/application/templates/auth/money_out.html
+++ b/application/templates/auth/money_out.html
@@ -5,13 +5,17 @@
   <table>
     <tr align="left">
       <th>User name</th>
-      <th>Balance Eur</th>
-      <th>Balance Cent</th>
+      <th>Balance/Eur</th>
     </tr>
     <tr align="left">
       <td>{{ current_user.username }}</td>
-      <td>{{ current_user.balance_eur }}</td>
-      <td>{{ current_user.balance_cent }}</td>
+      <td>
+        {% if current_user.balance_cent < 10 %}
+          {{ current_user.balance_eur ~ ".0" ~ current_user.balance_cent }}
+        {% else %}
+          {{ current_user.balance_eur ~ "." ~ current_user.balance_cent }}
+        {% endif %}
+      </td>
     </tr>
     <tr>
       <td>
