--- a/application/templates/bet_coupons/new_bet_coupon.html
+++ b/application/templates/bet_coupons/new_bet_coupon.html
@@ -21,11 +21,11 @@
 		</tr>
 		<tr>
 			<td>
-				<input type="radio" name={{ match_offer[1].id }} value="1" checked="checked">1</td>
+				<input type="radio" name={{ match_offer[1].id }} value="1" required>1</td>
 			<td>
-				<input type="radio" name={{ match_offer[1].id }} value="x" checked="checked">x</td>
+				<input type="radio" name={{ match_offer[1].id }} value="x" required>x</td>
 			<td>
-				<input type="radio" name={{ match_offer[1].id }} value="2" checked="checked">2</td>
+				<input type="radio" name={{ match_offer[1].id }} value="2" required>2</td>
 		</tr>
 		<tr>
 			<input type="hidden" name={{ "hidden" ~ match_offer[1].id }} value={{ match_offer[1].id }}>
