--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -16,19 +16,21 @@
 	       </button>
 	        <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
-            {% if current_user.role == "ADMIN" %}
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('matches_index') }}">List matches</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('matches_form') }}">Add a match</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('turnover_index') }}">Turnover statistics</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('admin_betting_offers_index') }}">Manage betting offers</a>
-            </li>
+            {% if current_user.is_authenticated %}
+              {% for role in current_user.roles() if role == "ADMIN" %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('matches_index') }}">List matches</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('matches_form') }}">Add a match</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('turnover_index') }}">Turnover statistics</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('admin_betting_offers_index') }}">Manage betting offers</a>
+                </li>
+              {% endfor %}
             {% endif %}
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('betting_offers_index') }}">List betting offers</a>
@@ -42,14 +44,14 @@
             <p>
       				Username {{ current_user.username }} is logged in. <a href="{{ url_for('auth_logout') }}">Log out</a><br>
               <a href="{{ url_for('bettor_show', id = current_user.id) }}">Show account</a><br>
-              {% if current_user.role != "ADMIN" %}
+              {% for role in current_user.roles() if role == "CUSTOMER" %}
               <a href="{{ url_for('bet_coupons_index') }}">My betting history</a><br>
                 {% if current_user.balance_cent < 10 %}
                   {{ "Balance: " ~ current_user.balance_eur ~ ".0" ~ current_user.balance_cent }}
                 {% else %}
                   {{ "Balance: " ~ current_user.balance_eur ~ "." ~ current_user.balance_cent }}
                 {% endif %}
-              {% endif %}
+              {% endfor %}
             </p>
             {% else %}
             <p>
